# alembic

./: .gitmodules  CMakeLists.txt
cmake/: AlembicBoost.cmake  AlembicHDF5.cmake  AlembicMaya.cmake  AlembicPyIlmBase.cmake  AlembicPython.cmake
cmake/Modules/: FindIlmBase.cmake  FindPyIlmBase.cmake
contrib/: .gitignore
lib/AbcOpenGL/: CMakeLists.txt
lib/Alembic/: CMakeLists.txt
maya/: CMakeLists.txt
maya/AbcExport/: CMakeLists.txt
maya/AbcImport/: CMakeLists.txt
python/PyAbcOpenGL/: CMakeLists.txt
python/PyAlembic/: CMakeLists.txt
python/PyAlembic/Tests/: CMakeLists.txt  main.cpp
python/examples/AbcView/: CMakeLists.txt
